--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -15,6 +15,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 [dependencies]
 revm-primitives = { path = "../primitives", version = "1.3.0", default-features = false }
 bn = { package = "substrate-bn", version = "0.6", default-features = false }
+cfg-if = "1.0"
 once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
 ripemd = { version = "0.1", default-features = false }
 sha2 = { version = "0.10", default-features = false }
@@ -44,6 +45,8 @@ std = [
     "secp256k1?/std",
 ]
 asm-keccak = ["revm-primitives/asm-keccak"]
+succinct-zkvm = { git = "https://github.com/0xkanekiken/sp1" branch = "kaneki-bn254-precompile" }
+anyhow = "1.0.79"
 
 optimism = ["revm-primitives/optimism"]
 
