chore: make bn128 apis public
Signed-off-by: 0xkanekiken <100861945+0xKanekiKen@users.noreply.github.com>

--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -19,6 +19,8 @@ cfg-if = "1.0"
 once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
 ripemd = { version = "0.1", default-features = false }
 sha2 = { version = "0.10", default-features = false }
+sp1-zkvm = { git = "https://github.com/0xkanekiken/sp1.git", branch = "kaneki-bn254-precompile"}
+getrandom = "0.2.12"
 # modexp precompile
 aurora-engine-modexp = { version = "1.0", default-features = false }
 
@@ -45,8 +47,6 @@ std = [
     "secp256k1?/std",
 ]
 asm-keccak = ["revm-primitives/asm-keccak"]
-succinct-zkvm = { git = "https://github.com/0xkanekiken/sp1" branch = "kaneki-bn254-precompile" }
-anyhow = "1.0.79"
 
 optimism = ["revm-primitives/optimism"]
 
