--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -19,7 +19,7 @@ cfg-if = "1.0"
 once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
 ripemd = { version = "0.1", default-features = false }
 sha2 = { version = "0.10", default-features = false }
-sp1-zkvm = { git = "https://github.com/0xkanekiken/sp1.git", branch = "kaneki-bn254-precompile"}
+sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git"}
 getrandom = "0.2.12"
 # modexp precompile
 aurora-engine-modexp = { version = "1.0", default-features = false }
